@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2017, 2020, Red Hat, Inc. All rights reserved.
+ * Copyright Amazon.com Inc. or its affiliates. All Rights Reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -46,11 +47,36 @@ public class TestPeriodicGC {
 
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
         output.shouldHaveExitValue(0);
-        if (periodic && !output.getOutput().contains("Trigger: Time since last GC")) {
+        if (periodic && !output.getOutput().contains("Trigger (GLOBAL): Time since last GC")) {
             throw new AssertionError(msg + ": Should have periodic GC in logs");
         }
-        if (!periodic && output.getOutput().contains("Trigger: Time since last GC")) {
+        if (!periodic && output.getOutput().contains("Trigger (GLOBAL): Time since last GC")) {
             throw new AssertionError(msg + ": Should not have periodic GC in logs");
+        }
+    }
+
+    public static void testGenerational(boolean periodic, String... args) throws Exception {
+        String[] cmds = Arrays.copyOf(args, args.length + 2);
+        cmds[args.length] = TestPeriodicGC.class.getName();
+        cmds[args.length + 1] = "test";
+        ProcessBuilder pb = ProcessTools.createJavaProcessBuilder(cmds);
+
+        OutputAnalyzer output = new OutputAnalyzer(pb.start());
+        output.shouldHaveExitValue(0);
+        if (periodic) {
+            if (!output.getOutput().contains("Trigger (YOUNG): Time since last GC")) {
+                throw new AssertionError("Generational mode: Should have periodic young GC in logs");
+            }
+            if (!output.getOutput().contains("Trigger (OLD): Time since last GC")) {
+                throw new AssertionError("Generational mode: Should have periodic old GC in logs");
+            }
+        } else {
+            if (output.getOutput().contains("Trigger (YOUNG): Time since last GC")) {
+                throw new AssertionError("Generational mode: Should not have periodic young GC in logs");
+            }
+            if (output.getOutput().contains("Trigger (OLD): Time since last GC")) {
+                throw new AssertionError("Generational mode: Should not have periodic old GC in logs");
+            }
         }
     }
 
@@ -156,6 +182,26 @@ public class TestPeriodicGC {
                  "-XX:+UseShenandoahGC",
                  "-XX:ShenandoahGCMode=passive",
                  "-XX:ShenandoahGuaranteedGCInterval=1000"
+        );
+
+        testGenerational(true,
+                         "-Xlog:gc",
+                         "-XX:+UnlockDiagnosticVMOptions",
+                         "-XX:+UnlockExperimentalVMOptions",
+                         "-XX:+UseShenandoahGC",
+                         "-XX:ShenandoahGCMode=generational",
+                         "-XX:ShenandoahGuaranteedYoungGCInterval=1000",
+                         "-XX:ShenandoahGuaranteedOldGCInterval=1500"
+        );
+
+        testGenerational(false,
+                         "-Xlog:gc",
+                         "-XX:+UnlockDiagnosticVMOptions",
+                         "-XX:+UnlockExperimentalVMOptions",
+                         "-XX:+UseShenandoahGC",
+                         "-XX:ShenandoahGCMode=generational",
+                         "-XX:ShenandoahGuaranteedYoungGCInterval=0",
+                         "-XX:ShenandoahGuaranteedOldGCInterval=0"
         );
     }
 
